@@ -32,6 +32,10 @@ xine-lib (1.1.4)
     FLAC release 1.1.3.
   * On platforms where it's possible, use "-Wl,-z,defs" option so that the linker
     reports undefined symbols at buildtime, rather than aborting at runtime.
+  * Replace --enable-flac configure option with --with-libflac, as the FLAC
+    support is always built-in through the audio demuxer plugin and the FFmpeg
+    decoder plugin, the option only controls the extra FLAC plugin that uses
+    libFLAC both for demuxing and decoding.
 
 xine-lib (1.1.3)
   * Security fixes:
